Fix: Resolved issues about overflow at login and signup pages

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@ html, body, #root{
   padding: 0;
   height: 100%;
   box-sizing: border-box;
-  overflow: auto;
 }
 
 .App {
@@ -16,7 +15,6 @@ html, body, #root{
   font-weight: 400;
   color: #FFFFFFDE;
   height: inherit;
-  overflow: auto;
 }
 
 @media screen and (max-width: 680px) {
